--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@types/node": "^25.2.2",
     "@types/pg": "^8.16.0",
+    "eslint": "^10.0.0",
+    "globals": "^17.3.0",
     "prettier": "^3.8.1",
     "prisma": "^7.3.0"
   }
