--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,37 @@
 name: Backend CI
 
 on:
-  push:
-    branches: [main, development]
-  pull_request:
-    branches: [main, development]
+    push:
+        branches: [main, development]
+    pull_request:
+        branches: [main, development]
 
 jobs:
-  lint-and-format:
-    runs-on: ubuntu-latest
+    ci:
+        name: CI
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node-version: [20.x]
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v4
+              with:
+                  node-version: ${{ matrix.node-version }}
+                  cache: "npm"
 
-      - name: Install dependencies
-        run: npm install
+            - name: Install dependencies
+              run: npm ci
 
-      - name: Check Prettier formatting
-        run: npm run format:check
+            - name: Prettier formatting check
+              run: npm run format:check
 
-      - name: Run ESLint
-        run: npm run lint
+            - name: Generate Prisma client
+              run: npx prisma generate
 
-      - name: Generate Prisma Client
-        run: npx prisma generate
+            - name: List project files
+              run: ls -la
