--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "npm i && npx prisma db pull && npx prisma generate",
     "dev": "node --watch src/server.js",
     "start": "node src/server.js",
+    "lint": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
