--- a/.env.sample
+++ b/.env.sample
@@ -7,11 +7,11 @@ PORT=3000
 # API Keys (when applicable)
 # API_KEY=your_api_key_here
 
-# JWT 
+# JWT Configuration
 # JWT_SECRET=your_jwt_secret_here
-# JWT_EXPIRES_IN = 1h
-# JWT_REFRESH_SECRET = your_refresh_jwt_secret_here
-# JWT_REFRESH_EXPIRES_IN = 7d
+# JWT_REFRESH_SECRET=your_refresh_jwt_secret_here
+# JWT_EXPIRES_IN=15m
+# JWT_REFRESH_EXPIRES_IN=7d
 
 # Node Environment
 # NODE_ENV=development
