--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,7 @@ PORT=3000
 
 # Node Environment
 # NODE_ENV=development
+
+# Admin user details
+# ADMIN_EMAIL = admin@prm.com
+# ADMIN_PASSWORD = 'Admin@12345'
