--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "npm i && npx prisma db pull && npx prisma generate",
     "dev": "node --watch src/server.js",
     "start": "node src/server.js",
+    "seed": "npx prisma db seed",
     "lint": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^25.2.2",
     "@types/pg": "^8.16.0",
     "eslint": "^10.0.0",
