--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.4.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.9.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "multer": "^2.0.2",
     "pg": "^8.18.0",
+    "streamifier": "^0.1.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "zod": "^4.3.6"
