--- a/.env.sample
+++ b/.env.sample
@@ -27,3 +27,8 @@ PORT=3000
 # CLOUDINARY_CLOUD_NAME = your_cloudinary_cloud_name
 # CLOUDINARY_API_KEY = your_cloudinary_api_key
 # CLOUDINARY_API_SECRET = your_cloudinary_api_secret
+
+# Stripe
+# STRIPE_SECRET_KEY = your_stripe_secret_key
+# FRONTEND_URL = http://localhost:3000
+# ENDPOINT_SECRET = your_endpoint_secret
