--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "dependencies": {
     "@dax-side/jwt-abstraction": "^0.2.5",
     "@prisma/adapter-pg": "^7.3.0",
-    "@prisma/client": "^7.4.0",
+    "@prisma/client": "^7.4.1",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.9.0",
+    "cors": "^2.8.6",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
@@ -33,6 +34,7 @@
     "multer": "^2.0.2",
     "pg": "^8.18.0",
     "streamifier": "^0.1.1",
+    "stripe": "^20.3.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "zod": "^4.3.6"
@@ -45,6 +47,6 @@
     "eslint": "^10.0.0",
     "globals": "^17.3.0",
     "prettier": "^3.8.1",
-    "prisma": "^7.4.0"
+    "prisma": "^7.4.1"
   }
 }
